--- a/cv_12.tex
+++ b/cv_12.tex
@@ -63,8 +63,8 @@ Music Faculty Award Scholarship
 
 \subsection{Programming}
 
-Javascript \textbullet{} BASH \textbullet{} Python \textbullet{} Rust \textbullet{}
- Rails \textbullet{} Python \textbullet{} \LaTeX\ \textbullet{} C \textbullet{} MySQL \textbullet{} CSS
+Javascript \textbullet{} BASH \textbullet{} C \textbullet{} Python \textbullet{} Rust \textbullet{}
+ Ruby \textbullet{} Python \textbullet{} \LaTeX\ \textbullet{} MySQL \textbullet{} CSS
  
 \sectionspace % Some whitespace after the section
  
@@ -82,7 +82,7 @@ Voiceover \textbullet{} ADR \textbullet{} Multi-channel \textbullet{} Ambisonics
 \location{Digital | 360/VR | Streaming}
 
 Transcoding \textbullet{} Post-Production \textbullet{} Broadcast Standards \textbullet{} Mobile Delivery (iOS, Android) \textbullet{} Streaming Technologies (HLS, DASH) \textbullet{}
- 3D Cubemapping
+ 3D Texture Mapping
 
 \sectionspace % Some whitespace after the section
  
@@ -180,7 +180,7 @@ Twitter:// \href{https://twitter.com/AndrewUnmuted}{\bf @AndrewUnmuted} \\
 \item Provided specialized digital media support to technology startups:
 \item \textbf{SpokenLayer}: A podcasting startup; responsible for develolping the company's automated audio processing network
 \item \textbf{Overture.me}: A mobile video app startup; responsible for building the company's cloud-based multimedia production stack for real-time iOS video editing
-\item \textbf{Streamable.com}: A video hosting and cataloging startup; responsible for assessing potential improvements to the company's Node.js transcoding stack
+\item \textbf{Streamable.com}: A video hosting and cataloging startup; responsible for assessing improvements to the company's Node.js transcoding stack
 \end{tightitemize}
 
 %------------------------------------------------
